Changed property name to allowBack + answer-card/answer-header